--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ INWORLD_API_KEY=
 # Logging:
 LOG_LEVEL=DEBUG #QUIET, DEBUG, VERBOSE
 VERBOSITY=0
+USER_NAME=cli_user
 
 # Memory Retrieval
 MEMORY_SIMILARITY_THRESHOLD=0.2
